--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "blitline": "1.1.6",
     "express": "2.5.11",
-    "nubnub": "0.1.0"
+    "superfeedr": "0.0.6"
     },
   "devDependencies": {},
   "optionalDependencies": {}
