--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "2.5.11",
     "superfeedr": "0.0.6",
     "request": "2.9.203",
-    "easyimage": "0.1.3"
+    "easyimage": "0.1.3",
+    "knox": "0.0.11"
     },
   "devDependencies": {},
   "optionalDependencies": {}
