--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "superfeedr": "0.0.6",
     "request": "2.9.203",
     "easyimage": "0.1.3",
-    "knox": "0.0.11"
+    "knox": "0.0.11",
+    "exif": "0.1.0"
     },
   "devDependencies": {},
   "optionalDependencies": {}
