--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "request": "2.9.203",
     "easyimage": "0.1.3",
     "knox": "0.0.11",
-    "exif": "0.1.0"
+    "exif": "0.1.0",
+    "underscore": "1.3.3"
     },
   "devDependencies": {},
   "optionalDependencies": {}
