--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "easyimage": "0.1.3",
     "knox": "0.0.11",
     "exif": "0.1.0",
-    "underscore": "1.3.3"
+    "underscore": "1.3.3",
+    "tumblr": "0.0.4"
     },
   "devDependencies": {},
   "optionalDependencies": {}
