--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "knox": "0.0.11",
     "exif": "0.1.0",
     "underscore": "1.3.3",
-    "tumblr": "0.0.4"
+    "tumblr": "0.0.4",
+    "mysql": "0.9.6"
     },
   "devDependencies": {},
   "optionalDependencies": {}
