--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "url": "git@bitbucket.org:philippkueng/eatingstats.git"
   },
   "engines": {
-    "node": "~0.6.11"
+    "node": "~0.6.17"
   },
   "dependencies": {
-    "blitline": "1.1.6",
     "express": "2.5.11",
     "superfeedr": "0.0.6",
     "request": "2.9.203",
     "easyimage": "0.1.3",
-    "knox": "0.0.11"
+    "knox": "0.0.11",
+    "mongodb": "1.1.4"
     },
   "devDependencies": {},
   "optionalDependencies": {}
