--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "exif": "0.1.0",
     "underscore": "1.3.3",
     "tumblr": "0.0.4",
-    "mysql": "0.9.6"
+    "mysql": "0.9.6",
+    "imagemagick": "0.1.2"
     },
   "devDependencies": {},
   "optionalDependencies": {}
