--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
   },
   "dependencies": {
     "express": "2.5.11",
-    "superfeedr": "0.0.6",
     "request": "2.9.203",
     "easyimage": "0.1.3",
     "knox": "0.0.11",
     "mongodb": "1.1.4",
-    "exif": "0.1.0",
     "underscore": "1.3.3",
     "tumblr": "0.0.4",
-    "mysql": "0.9.6",
-    "imagemagick": "0.1.2"
+    "imagemagick": "0.1.2",
+    "async": "0.1.22"
     },
   "devDependencies": {},
   "optionalDependencies": {}
