--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "underscore": "1.3.3",
     "tumblr": "0.0.4",
     "imagemagick": "0.1.2",
-    "async": "0.1.22"
+    "async": "0.1.22",
+    "jade": "0.27.4"
     },
   "devDependencies": {},
   "optionalDependencies": {}
