--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "imagemagick": "0.1.2",
     "async": "0.1.22",
     "jade": "0.27.4",
-    "moment": "1.7.2"
+    "moment": "1.7.2",
+    "nodefly": "stable"
     },
   "devDependencies": {},
   "optionalDependencies": {}
